objects/Home_Delivery_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <inlineHelpText>Enter you name</inlineHelpText>
        <label>Customer Name</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Feedback__c</fullName>
        <label>Detailed Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ratings__c</fullName>
        <label>Ratings</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>Home Delivery Feedback</label>
    <nameField>
        <displayFormat>FDBK-{0000}</displayFormat>
        <label>Home Delivery Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Delivery Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>